# aa-standingsmanager

./: .coveragerc  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CHANGELOG.md  Makefile  PROJECT_VALIDATION_REPORT.md  README.md  pyproject.toml  runtests.py  tox.ini
.github/workflows/: publish.yml  test.yml
standingsmanager/: __init__.py  admin.py  app_settings.py  app_settings_old_backup.py  apps.py  auth_hooks.py  forms.py  helpers.py  managers.py  models.py  permissions.py  providers.py  tasks.py  urls.py  validators.py  views.py
standingsmanager/core/: esi_api.py  esi_contacts.py
standingsmanager/management/commands/: standingssync_calc_war_ids.py
standingsmanager/migrations/: 0001_initial_new_2.py  0002_improve_sync_logic.py  0003_add_alliance_contacts_label_field.py  0004_refactor_to_persistent_standings.py  0005_add_missing_permissions.py
standingsmanager/templates/standingsmanager/: _base.html  characters.html  manage_requests.html  manage_revocations.html  request.html  sync.html  view_standings.html
standingsmanager/templatetags/: standingssync.py
standingsmanager/tests/: factories.py  test_admin.py  test_business_logic.py  test_integration.py  test_managers.py  test_models.py  test_models_new.py  test_new_views.py  test_tasks.py  test_templatetags.py  test_views.py  utils.py
standingssync/: __init__.py  admin.py  app_settings.py  helpers.py  managers.py  models.py  tasks.py  urls.py  views.py
standingssync/core/: character_contacts.py  esi_api.py  esi_contacts.py  esi_wars.py  esi_wrapper.py
standingssync/migrations/: 0002_rename_last_sync_syncedcharacter_last_update_at_and_more.py  0003_remove_syncedcharacter_last_error.py  0004_rename_version_hash_syncedcharacter_version_hash_manager_and_more.py  0005_remove_syncedcharacter_version_hash_character_and_more.py  0006_rename_last_update_at_syncedcharacter_last_sync_at_and_more.py  0007_alter_syncedcharacter_character_ownership_and_more.py
standingssync/templatetags/: standingssync.py
standingssync/tests/: factories.py  test_integration.py  test_managers.py  test_models.py  test_tasks.py  test_views.py  utils.py
testauth/settings/: local.py
testauth/settings_aa3/: local.py
testauth/settings_aa4/: local.py
(+19 files in other folders)
